[project]
dynamic = ["dependencies"]
name = "minipti"
version = "1.9.0"
authors = [
    { name = "Jonas Bilal", email = "jonasbilal@outlook.com" },
]

description = "Provides algorithm and GUI for photo thermal interferometry and 3x3 couplers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://www.fhnw.ch/en/about-fhnw/schools/school-of-engineering/institutes/institute-for-sensors-and-electronics/aerosol-measurement-technology"
"Source" = "https://github.com/bilaljo/MiniPTI"
"Bug Tracker" = "https://github.com/bilaljo/MiniPTI/issues"
