[project]
dependencies = [
    "dacite==1.8.1",
    "fastcrc==0.2.1",
    "h5py==3.10.0",
    "numpy==1.26.1",
    "pandas==2.1.1",
    "PyQt5>=5.15.2",
    "pyqtgraph==0.13.3",
    "pyserial==3.5",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "scipy==1.11.3",
    "six==1.16.0",
    "types-pytz==2023.3.1.1",
    "tzdata==2023.3",
    "pythonnet==3.0.3; platform_system == 'Windows'",
    "overrides==7.4.0",
    "pyqtdarktheme==2.1.0",
    "matplotlib==3.8.0",
    "markdown==3.5",
    "qtwidgets==1.1",
    "darkdetect[macos-listener]==0.8.0",
    "qtpy==2.4.1"
]
name = "minipti"
version = "1.9.5"
authors = [
    { name = "Jonas Bilal", email = "jonasbilal@outlook.com" },
]

description = "Provides algorithm and GUI for (photo thermal) interferometry and 3x3 couplers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.fhnw.ch/en/about-fhnw/schools/school-of-engineering/institutes/institute-for-sensors-and-electronics/aerosol-measurement-technology"
"Source" = "https://github.com/bilaljo/MiniPTI"
"Bug Tracker" = "https://github.com/bilaljo/MiniPTI/issues"
